# depfast-ae

./: .gitignore  CMakeLists.txt  Makefile  README.md  avg_latency.py  batch_kill.sh  batch_op.sh  c.sh  chain-one-click.sh  chain_run.sh  chain_run3.sh  chain_run5.sh  chain_run7.sh  chain_run9.sh  cleanup.sh  compile.txt  data_processing.py  dep.sh  draw_figure.sh  extract_tail.py  extract_tail_async.py  extract_tail_fsync.py  extract_tail_rpc.py  extract_tail_rpc_leader.py  fg.sh  gen_dep_graph.py  get_results.sh  inf  init.sh  ip_config.sh  kill.sh  noslow.sh  one-click.sh  requirements.txt  run.py  run_exp1.py  run_exp1_1VM.py  run_exp2.py  run_exp2_1VM.py  run_exp3.py  (+9 more)
.run/: Build All.run.xml  epaxos-1c1s-tpca_zipf_1.0-con100.run.xml  janus-1c1s-tpca_zipf_1.0-con100.run.xml  janus-1c1s-tpca_zipf_1.0.run.xml  janus-1c1s-tpcc_no-con_1.run.xml  janus-1c1s-tpcc_no-con_100.run.xml  janus-3c3s-tpca_zipf_1.0-con_100.run.xml  janus-3c3s3r-tpca-con_100.run.xml  janus-3c3s3r-tpcc-con_100.run.xml  janus-64c8s-tpca_zipf_1.0-con_100.run.xml  janus-64c8s-tpcc-con_100.run.xml  none-1c1s-rw-con_100.run.xml  none-1c1s-rw.run.xml  none-1c1s-tpcc-con_100.run.xml  none-1c1s3r-tpca_zipf_1.0_con1.run.xml  none-3c1s3r-tpca-con_100.run.xml  none-3c1s3r-tpcc-con_100.run.xml  none-3c3s-rw-con_100.run.xml  none-3c3s-tpca_zipf_1.0-con_100.run.xml  none-3c3s-tpcc-con_100.run.xml  none-3c3s-tpcc_no-con_100.run.xml  none-3c3s3r-tpca-con_100.run.xml  none-64c8s-rw-con_100.run.xml  none-64c8s-tpca-con_100.run.xml  none_epaxos-1c1s-rw.run.xml  none_epaxos-3c1s3r-rw.run.xml  none_paxos-3c1s3r-rw.run.xml  none_paxos-3c1s3r-tpca-con_100.run.xml  none_paxos-3c1s3r-tpca.run.xml  occ_paxos-1c1s-tpca_zipf_1.0-con100.run.xml  occ_paxos-1c1s3r-tpca_zipf_1.0_con1.run.xml  occ_paxos-3c1s3r-tpca_zipf_1.0_con100.run.xml  occ_paxos-3c1s3r-tpcc_con100.run.xml  occ_paxos-3c3s-tpca_zipf_1.0_con100.run.xml  occ_paxos-3c3s3r-tpca_zipf_1.0.run.xml  occ_paxos-3c3s3r-tpca_zipf_1.0_con100.run.xml  paxosbench-test.run.xml  rcc-1c1s-tpca_zipf_1.0.run.xml  rcc-1c1s-tpca_zipf_1.0_con_1.run.xml  rcc-64c8s-tpcc-con_100.run.xml  (+28 more)
ATC_20220525_3rounds_figure6b/: log.txt
ATC_20220527_rw_figure56_1round/: log.txt
ATC_20220527_tpca_figure56_1round/: log.txt
archive/: disk2-tpca_2pl_ww-fpga_raft_1_1_-1.tgz  disk2-tpca_2pl_ww-fpga_raft_1_1_-1.yml  disk2PAYMENT_2PL_fpga_raft_tpca.csv  disk4-tpca_2pl_ww-fpga_raft_1_1_-1.tgz  disk4-tpca_2pl_ww-fpga_raft_1_1_-1.yml  disk4PAYMENT_2PL_fpga_raft_tpca.csv  disk5-tpca_2pl_ww-fpga_raft_1_1_-1.yml  disk5PAYMENT_2PL_fpga_raft_tpca.csv  disk_test1-tpca_2pl_ww-fpga_raft_1_1_-1.yml  disk_test10-tpca_2pl_ww-fpga_raft_1_1_-1.yml  disk_test10PAYMENT_2PL_fpga_raft_tpca.csv  disk_test1PAYMENT_2PL_fpga_raft_tpca.csv  disk_test2-tpca_2pl_ww-fpga_raft_1_1_-1.yml  disk_test2PAYMENT_2PL_fpga_raft_tpca.csv  disk_test3-tpca_2pl_ww-fpga_raft_1_1_-1.yml  disk_test3PAYMENT_2PL_fpga_raft_tpca.csv  disk_test4-tpca_2pl_ww-fpga_raft_1_1_-1.tgz  disk_test4-tpca_2pl_ww-fpga_raft_1_1_-1.yml  disk_test4PAYMENT_2PL_fpga_raft_tpca.csv  disk_test5-tpca_2pl_ww-fpga_raft_1_1_-1.tgz  disk_test5-tpca_2pl_ww-fpga_raft_1_1_-1.yml  disk_test5PAYMENT_2PL_fpga_raft_tpca.csv  disk_test6-tpca_2pl_ww-fpga_raft_1_1_-1.tgz  disk_test6-tpca_2pl_ww-fpga_raft_1_1_-1.yml  disk_test6PAYMENT_2PL_fpga_raft_tpca.csv  disk_test7-tpca_2pl_ww-fpga_raft_1_1_-1.yml  disk_test7PAYMENT_2PL_fpga_raft_tpca.csv  disk_test8-tpca_2pl_ww-fpga_raft_1_1_-1.yml  disk_test8PAYMENT_2PL_fpga_raft_tpca.csv  disk_test9-tpca_2pl_ww-fpga_raft_1_1_-1.yml  disk_test9PAYMENT_2PL_fpga_raft_tpca.csv  exp5_1-tpca_occ-multi_paxos_1_1_-1.yml  exp5_10-tpca_occ-multi_paxos_1_1_-1.yml  exp5_10PAYMENT_OCC_multi_paxos_tpca.csv  exp5_1PAYMENT_OCC_multi_paxos_tpca.csv  exp5_2-tpca_occ-multi_paxos_1_1_-1.yml  exp5_2PAYMENT_OCC_multi_paxos_tpca.csv  exp5_3-tpca_occ-multi_paxos_1_1_-1.yml  exp5_3PAYMENT_OCC_multi_paxos_tpca.csv  exp5_4-tpca_occ-multi_paxos_1_1_-1.yml  (+73 more)
config/: 128c8s1p.yml  12c3s3r1p.yml  15c3s3r1p.yml  18c3s3r1p.yml  1c1s1p.yml  1c1s2r.yml  1c1s3r1p.yml  1c1s3r3p.yml  2pl_ww_fpga_raft.yml  3c3s3r1p.yml  9c1s3r1p.yml  carousel.yml  carousel_basic.yml  concurrent_1.yml  concurrent_10.yml  concurrent_105.yml  concurrent_108.yml  concurrent_110.yml  concurrent_1100.yml  concurrent_11000.yml  concurrent_12.yml  concurrent_120.yml  concurrent_1200.yml  concurrent_12000.yml  concurrent_130.yml  concurrent_1300.yml  concurrent_13000.yml  concurrent_14.yml  concurrent_140.yml  concurrent_1400.yml  concurrent_14000.yml  concurrent_15.yml  concurrent_150.yml  concurrent_1500.yml  concurrent_15000.yml  concurrent_16.yml  concurrent_160.yml  concurrent_1600.yml  concurrent_16000.yml  concurrent_1700.yml  (+109 more)
data_processing/: a  lattput.py  plot_copilot.py  plot_etcd.py  plot_raft.py  plot_ref_copilot.py  processing.py
doc/: contribute.md  profile.md
docker/: Dockerfile  run.sh
docs/: dev.md
eRPC/: CMakeLists.txt  run.sh
ips/: ip_c1  ip_s1  ip_s2  ip_s3  ip_s4  ip_s5
plots/: latency.npy  latency2.npy  latency3.npy  latency4.npy  latency5.npy  plot.py
scripts/: README  archive.sh  avg_latency.py  epaxos_perf_test.py  extract_add.py  extract_ae.py  extract_min.py  extract_oae.py  extract_read.py  extract_tail.py  extract_tail_accept.py  extract_tail_async.py  extract_write.py  get_bandwidth.sh  micro_bench.cpp  paxos-microbench.py  plot_latency.py  train.sh
src/: ExampleClientProxyWrapper.vcc  ExampleClientProxyWrapper.vh  ExampleServiceImpl.vcc  ExampleServiceImpl.vh  HelloClient.cc  HelloServer.cc  HelloServer.cc.save  out.txt  standalone_perf.cc
tmp/: janus-final-disk24fdov9ki.yml  janus-final-disk5tde7709m.yml  janus-final-disk6f2v3_7ei.yml  janus-final-disk7xsobfdrj.yml  janus-final-disk_test5fo6cpunj.yml  janus-final-disk_test7s9hp4jf4.yml  janus-final-disk_test85yfoazpg.yml  janus-final-fast1_ayfom29vz.yml  janus-final-fast_1_1_23fzetei8.yml  janus-final-fast_1_1_2svsd8h8k.yml  janus-final-fast_ace4cyt80s.yml  janus-final-fast_ax0_db4rb.yml  janus-final-fast_b_34nkwl9.yml  janus-final-testing2lk5vz5n.yml  janus-final-testing_l3vtozv.yml  janus-final-testingfr5jr0tq.yml  (+16 more)
(+879 files in other folders)
